libs: fix stage path for resolve libtool issues

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -22,8 +22,16 @@ dir_y =
 dir_n =
 dir_  =
 
-LIBS_INCLUDE_LIBICONV=$(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)$(CONFIG_FIRMWARE_INCLUDE_ARIA),y,n)
+# build shared libs for minidlna and firefly
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),y)
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y)
+LIBS_BUILD_SHARED=y
+endif
+endif
+
 LIBS_INCLUDE_LIBSSL=$(if $(CONFIG_FIRMWARE_INCLUDE_SFTP)$(CONFIG_FIRMWARE_INCLUDE_OPENSSH)$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)$(CONFIG_FIRMWARE_INCLUDE_ARIA),y,n)
+LIBS_INCLUDE_LIBICONV=$(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)$(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y,n)
+LIBS_INCLUDE_MEDIA=$(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)$(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y,n)
 
 dir_y						+= libz
 dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
@@ -33,15 +41,15 @@ dir_y						+= libusb
 # tcpdump shared libs
 dir_$(CONFIG_FIRMWARE_INCLUDE_TCPDUMP)		+= libpcap
 
-# minidlna shared libs
-dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libid3tag
-dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libav
+# minidlna and firefly shared libs
+dir_$(LIBS_INCLUDE_MEDIA)			+= libid3tag
+dir_$(LIBS_INCLUDE_MEDIA)			+= libav
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libexif
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libjpeg
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libogg
 dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libvorbis
-dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libflac
-dir_$(CONFIG_FIRMWARE_INCLUDE_MINIDLNA)		+= libsqlite
+dir_$(LIBS_INCLUDE_MEDIA)			+= libflac
+dir_$(LIBS_INCLUDE_MEDIA)			+= libsqlite
 
 # transmission shared libs
 dir_$(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION)	+= libcurl
