--- a/trunk/libs/libflac/Makefile
+++ b/trunk/libs/libflac/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=flac-1.2.1
 
-all:	config_test
+all: config_test
 	$(MAKE) -C $(SRC_NAME)
 
 config_test:
@@ -13,13 +13,19 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
-		--prefix=/ \
+		--prefix=$(STAGEDIR) \
+		$(if $(LIBS_BUILD_SHARED),--disable-static,--enable-static) \
+		$(if $(LIBS_BUILD_SHARED),--enable-shared,--disable-shared) \
 		--disable-cpplibs \
-		--enable-static \
-		$(if $(CONFIG_LIB_BUILD_SHARED),--disable-static,--enable-static) \
-		$(if $(CONFIG_LIB_BUILD_SHARED),--enable-shared,--disable-shared) \
-		--with-ogg-libraries=$(DESTDIR)/lib \
+		--disable-sse \
+		--disable-3dnow \
+		--disable-altivec \
+		--disable-doxgen-docs \
+		--disable-local-xmms-plugin \
+		--disable-xmms-plugin \
+		--disable-ogg \
 		--disable-oggtest \
+		--disable-debug \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
@@ -31,9 +37,9 @@ clean:
 	rm -f config_done
 
 install:
-	$(MAKE) -C $(SRC_NAME) install
+	$(MAKE) -C $(SRC_NAME) install DESTDIR=""
 
 romfs:
-	if [ $(CONFIG_LIB_BUILD_SHARED) = "y" ] ; then \
-		cp -fP $(DESTDIR)/lib/libFLAC.so* $(ROMFSDIR)/lib ; \
-	fi
+ifeq ($(LIBS_BUILD_SHARED),y)
+	cp -fP $(DESTDIR)/lib/libFLAC.so* $(ROMFSDIR)/lib ;
+endif
