--- a/trunk/libs/libsqlite/Makefile
+++ b/trunk/libs/libsqlite/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=sqlite-autoconf-3070701
 
-all:	config_test
+all: config_test
 	$(MAKE) -C $(SRC_NAME)
 
 config_test:
@@ -13,9 +13,9 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
-		--prefix=/ \
-		$(if $(CONFIG_LIB_BUILD_SHARED),--disable-static,--enable-static) \
-		$(if $(CONFIG_LIB_BUILD_SHARED),--enable-shared,--disable-shared) \
+		--prefix=$(STAGEDIR) \
+		$(if $(LIBS_BUILD_SHARED),--disable-static,--enable-static) \
+		$(if $(LIBS_BUILD_SHARED),--enable-shared,--disable-shared) \
 		--disable-readline \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
@@ -28,10 +28,10 @@ clean:
 	rm -f config_done
 
 install:
-	$(MAKE) -C $(SRC_NAME) install
+	$(MAKE) -C $(SRC_NAME) install DESTDIR=""
 
 romfs:
-	if [ $(CONFIG_LIB_BUILD_SHARED) = "y" ] ; then \
-		cp -fP $(DESTDIR)/lib/libsqlite3.so* $(ROMFSDIR)/lib ; \
-	fi
+ifeq ($(LIBS_BUILD_SHARED),y)
+	cp -fP $(DESTDIR)/lib/libsqlite3.so* $(ROMFSDIR)/lib ;
+endif
 
