--- a/trunk/libs/libevent/Makefile
+++ b/trunk/libs/libevent/Makefile
@@ -13,7 +13,7 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
-		--prefix=/ \
+		--prefix=$(STAGEDIR) \
 		--enable-static \
 		--disable-shared \
 		--disable-openssl \
@@ -28,7 +28,7 @@ clean:
 	rm -f config_done
 
 install:
-	$(MAKE) -C $(SRC_NAME) install
+	$(MAKE) -C $(SRC_NAME) install DESTDIR=""
 
 romfs:
 
