--- a/trunk/libs/libflac/flac-1.2.1/Makefile.in
+++ b/trunk/libs/libflac/flac-1.2.1/Makefile.in
@@ -235,7 +235,7 @@ target_alias = @target_alias@
 AUTOMAKE_OPTIONS = foreign 1.7
 
 #SUBDIRS = doc include m4 man src examples test build obj
-SUBDIRS = include m4 man src examples test build obj
+SUBDIRS = include m4 src build obj
 
 DISTCLEANFILES = libtool-disable-static
 
