--- a/trunk/libs/libflac/flac-1.2.1/src/Makefile.in
+++ b/trunk/libs/libflac/flac-1.2.1/src/Makefile.in
@@ -226,16 +226,7 @@ target_alias = @target_alias@
 SUBDIRS = \
 	libFLAC \
 	share \
-	flac \
-	metaflac \
-	monkeys_audio_utilities \
 	$(XMMS_DIRS) \
-	plugin_winamp2 \
-	test_grabbag \
-	test_libs_common \
-	test_libFLAC \
-	test_seeking \
-	test_streams \
 	$(CPPLIBS_DIRS)
 
 
@@ -256,9 +247,8 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
 	check-recursive installcheck-recursive
 DIST_COMMON = $(srcdir)/Makefile.in Makefile.am
 DIST_SUBDIRS = libFLAC share flac metaflac monkeys_audio_utilities \
-	plugin_common plugin_xmms plugin_winamp2 test_grabbag \
-	test_libs_common test_libFLAC test_seeking test_streams \
-	libFLAC++ test_libFLAC++
+	plugin_common plugin_xmms plugin_winamp2 \
+	libFLAC++
 all: all-recursive
 
 .SUFFIXES:
