--- a/trunk/libs/libssl/Makefile
+++ b/trunk/libs/libssl/Makefile
@@ -10,7 +10,7 @@ COPTS+=-DOPENSSL_SMALL_FOOTPRINT
 LOPTS=-Wl,--gc-sections -L$(DESTDIR)/lib
 
 OPENSSL_CIPHERS = no-camellia no-capieng no-cms no-gmp no-jpake no-krb5 no-mdc2 no-rfc3779 no-seed \
-                  no-ec no-ecdsa no-ecdh no-ec2m no-err no-threads no-idea no-rc2 no-rc5 no-sha0 \
+                  no-ec no-ecdh no-ec2m no-ecdsa no-err no-threads no-idea no-rc2 no-rc5 no-sha0 \
                   no-engine no-hw no-md2 no-md4 no-sse2 no-dso no-ts no-aes192 no-ripemd no-rmd160 \
                   no-smime no-ans1 no-cast no-whirlpool no-sctp no-srp no-jpake no-rfc3779 no-ssl2
 
@@ -29,8 +29,8 @@ configure:
 	./Configure \
 		linux-mipsel \
 		shared \
-		--prefix=/ \
-		--install_prefix=$(DESTDIR) \
+		--prefix=$(STAGEDIR) \
+		--install_prefix= \
 		$(COPTS) \
 		$(LOPTS) \
 		$(OPENSSL_CIPHERS) ; \
@@ -41,7 +41,7 @@ clean:
 	rm -f config_done
 
 install:
-	$(MAKE) -C $(SRC_NAME) install
+	$(MAKE) -C $(SRC_NAME) install DESTDIR=""
 
 romfs:
 	cp -fP $(DESTDIR)/lib/libssl.so* $(ROMFSDIR)/lib
