--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -58,7 +58,7 @@ dir_y							+= wpa_supplicant
 dir_y							+= pppd
 dir_y							+= accel-pptpd
 dir_y							+= xl2tpd
-dir_$(CONFIG_FIRMWARE_USE_RPL2TP)			+= rp-l2tp
+dir_y							+= rp-l2tp
 dir_y							+= usb_modeswitch
 dir_y							+= rstats
 dir_y							+= tcpcheck
