kernel-3.0.x config: fix UVC modules. add UVC selection for project config

--- a/trunk/.config
+++ b/trunk/.config
@@ -37,9 +37,12 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable HFS+ filesystem support (only for kernel 3.x, add ~0.1MB)
-CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
+#CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
 
-### Select WebGUI (0=Ribbon Fixed, 1=ASUS Blue)
+### Enable UVC camera modules (add ~0.2MB)
+CONFIG_FIRMWARE_ENABLE_UVC=y
+
+### Select WebGUI (0=Ribbon Fixed, 1=ASUS Blue, deprecated)
 CONFIG_FIRMWARE_WEBGUI=0
 
 ### Include WebGUI international resources. Increased firmware size
