--- a/trunk/configs/IPv6/SWR1100/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/SWR1100/kernel-3.0.x.ram.config
@@ -1188,12 +1188,8 @@ CONFIG_VIDEO_MEDIA=m
 CONFIG_VIDEO_V4L2=m
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
-# CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-# CONFIG_VIDEO_HELPER_CHIPS_AUTO is not set
-
-#
-# Encoders, decoders, sensors and other helper chips
-#
+CONFIG_VIDEO_FIXED_MINOR_RANGES=y
+CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 
 #
 # Audio decoders, processors and mixers
@@ -1214,7 +1210,6 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 #
 # MPEG video encoders
 #
-# CONFIG_VIDEO_CX2341X is not set
 
 #
 # Video encoders
