rc: change USB mountpoints rule to volume LABEL (if exist)

--- a/trunk/user/libdisk/Makefile
+++ b/trunk/user/libdisk/Makefile
@@ -6,13 +6,17 @@ CFLAGS += -fPIC
 CFLAGS += -I. -I$(TOP)/shared -I$(TOP)/shared/include
 LDFLAGS = -L$(TOP)/shared -lshared
 
-all: libdisk.so
+all: libdisk.so test_share
 
 libdisk.so: $(OBJS) $(TOP)/shared/shutils.o
 	$(LD) -shared -o $@ $^
 
+test_share: test_share.o libdisk.so
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
+
 romfs: all
-	$(ROMFSINST) -S /lib/libdisk.so
+	$(ROMFSINST) /lib/libdisk.so
+	$(ROMFSINST) /sbin/test_share
 
 clean:
-	rm -f *.o libdisk.so
+	rm -f *.o libdisk.so test_share
