project tree: replace huge sdparm by busybox eject applet

--- a/trunk/configs/IPv4/busybox.config
+++ b/trunk/configs/IPv4/busybox.config
@@ -677,8 +677,8 @@ CONFIG_CRONTAB=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 # CONFIG_DEVMEM is not set
-# CONFIG_EJECT is not set
-# CONFIG_FEATURE_EJECT_SCSI is not set
+CONFIG_EJECT=y
+CONFIG_FEATURE_EJECT_SCSI=y
 # CONFIG_FBSPLASH is not set
 # CONFIG_FLASHCP is not set
 # CONFIG_FLASH_LOCK is not set
