--- a/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.config
@@ -341,6 +341,7 @@ CONFIG_NF_CT_PROTO_GRE=m
 # CONFIG_NF_CONNTRACK_AMANDA is not set
 CONFIG_NF_CONNTRACK_FTP=m
 CONFIG_NF_CONNTRACK_H323=m
+CONFIG_NF_CONNTRACK_RTSP=m
 # CONFIG_NF_CONNTRACK_IRC is not set
 # CONFIG_NF_CONNTRACK_NETBIOS_NS is not set
 CONFIG_NF_CONNTRACK_PPTP=m
@@ -416,6 +417,7 @@ CONFIG_NF_NAT_FTP=m
 # CONFIG_NF_NAT_AMANDA is not set
 CONFIG_NF_NAT_PPTP=m
 CONFIG_NF_NAT_H323=m
+CONFIG_NF_NAT_RTSP=m
 CONFIG_NF_NAT_SIP=m
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_IMQ is not set
