--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.50 Kernel Configuration
+# Linux/mips 3.0.54 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -439,7 +439,7 @@ CONFIG_NF_CONNTRACK_H323=m
 # CONFIG_NF_CONNTRACK_NETBIOS_NS is not set
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=m
-# CONFIG_NF_CONNTRACK_RTSP is not set
+CONFIG_NF_CONNTRACK_RTSP=m
 # CONFIG_NF_CONNTRACK_SANE is not set
 CONFIG_NF_CONNTRACK_SIP=m
 # CONFIG_NF_CONNTRACK_TFTP is not set
@@ -543,7 +543,7 @@ CONFIG_NF_NAT_FTP=m
 # CONFIG_NF_NAT_TFTP is not set
 # CONFIG_NF_NAT_AMANDA is not set
 CONFIG_NF_NAT_PPTP=m
-# CONFIG_NF_NAT_RTSP is not set
+CONFIG_NF_NAT_RTSP=m
 CONFIG_NF_NAT_H323=m
 CONFIG_NF_NAT_SIP=m
 CONFIG_IP_NF_MANGLE=m
