kernel-2.6.21.x: fix switch config

--- a/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-2.6.21.x.ram.config
@@ -853,6 +853,8 @@ CONFIG_RTL8367_ASIC_M=y
 # CONFIG_RTL8367_ASIC_RVB is not set
 # CONFIG_RTL8367_ASIC_MB is not set
 # CONFIG_RTL8367_ASIC_MVB is not set
+CONFIG_RTL8367_CIF_SMI=y
+# CONFIG_RTL8367_CIF_MDIO is not set
 CONFIG_RTL8367_SMI_BUS_CPU_GPIO_DATA=1
 CONFIG_RTL8367_SMI_BUS_CPU_GPIO_CLCK=2
 CONFIG_RTL8367_PORT_WAN=4
@@ -862,6 +864,7 @@ CONFIG_RTL8367_PORT_LAN3=1
 CONFIG_RTL8367_PORT_LAN4=0
 # CONFIG_RTL8367_LAN_CPU_EXT0 is not set
 CONFIG_RTL8367_LAN_CPU_EXT1=y
+# CONFIG_RTL8367_LAN_CPU_EXT2 is not set
 # CONFIG_RTL8367_USE_INIC_EXT is not set
 CONFIG_RTL8367_RGMII_DELAY_TX=1
 CONFIG_RTL8367_RGMII_DELAY_RX=1
