--- a/trunk/configs/IPv4/SWR1100/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.0.x.config
@@ -528,7 +528,7 @@ CONFIG_IP_NF_MANGLE=m
 CONFIG_IP_NF_TARGET_TOS=m
 # CONFIG_IP_NF_TARGET_ECN is not set
 CONFIG_IP_NF_TARGET_TTL=m
-# CONFIG_IP_NF_RAW is not set
+CONFIG_IP_NF_RAW=m
 # CONFIG_IP_NF_ARPTABLES is not set
 CONFIG_BRIDGE_NF_EBTABLES=m
 # CONFIG_BRIDGE_EBT_BROUTE is not set
