--- a/trunk/configs/IPv6/SWR1100/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/SWR1100/kernel-3.0.x.ram.config
@@ -561,7 +561,7 @@ CONFIG_IP_NF_MANGLE=m
 CONFIG_IP_NF_TARGET_TOS=m
 # CONFIG_IP_NF_TARGET_ECN is not set
 CONFIG_IP_NF_TARGET_TTL=m
-# CONFIG_IP_NF_RAW is not set
+CONFIG_IP_NF_RAW=m
 # CONFIG_IP_NF_ARPTABLES is not set
 
 #
