--- a/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.54 Kernel Configuration
+# Linux/mips 3.0.56 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -446,14 +446,17 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=m
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
+# CONFIG_NETFILTER_XT_TARGET_CT is not set
 CONFIG_NETFILTER_XT_TARGET_DSCP=m
 CONFIG_NETFILTER_XT_TARGET_HL=m
 # CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
 CONFIG_NETFILTER_XT_TARGET_MARK=m
 # CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
 # CONFIG_NETFILTER_XT_TARGET_NFQUEUE is not set
+# CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
+# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
