--- a/trunk/.config
+++ b/trunk/.config
@@ -23,7 +23,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
 ### Disable GMAC2 (eth3) for Ethernet raeth.
-### LAN/WAN separated by VLAN1/2 (eth2.1/eth2.2)
+### LAN/WAN isolation by VLAN1/2 (eth2.1/eth2.2)
 ### Only take effect for "RT-N56U" target.
 #CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
 
