project config: add selector for raeth - Ralink or Asus

--- a/trunk/.config
+++ b/trunk/.config
@@ -10,12 +10,12 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
 CONFIG_FIRMWARE_ROOTFS_VER="3.2"
-CONFIG_FIRMWARE_BUILDS_VER="031"
+CONFIG_FIRMWARE_BUILDS_VER="032"
 
 ### Linux kernel and toolchain
 #CONFIG_LINUXDIR=linux-2.6.21.x
 CONFIG_LINUXDIR=linux-3.0.x
-CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
+CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 
 ### Build ROOTFS_IN_RAM firmware mode (kernel+initramfs).
 ### Decreased firmware size, but more RAM used, slow boot.
@@ -26,6 +26,14 @@ CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
 ### LAN/WAN isolation by VLAN1/2 (eth2.1/eth2.2)
 ### Only take effect for "RT-N56U" target.
 #CONFIG_FIRMWARE_USE_SINGLE_RGMII=y
+
+### Use "raeth" (Ethernet) driver, specially hacked by ASUS for RT-N65U.
+### This driver used 1xRGMII scheme, boost USB3 TX speed up to 35 MB/s,
+### boost USB2 TX speed up to 20 MB/s. Routed all local TX traffic via PPE.
+### Driver is unofficial (non-Ralink/MTK), used tricks and hacks by ASUS.
+### Driver has no sources, based on old Ralink codebase raeth 2.0.
+### Still buggy (tx_ring full and NETDEV_WATCHDOG issues).
+#CONFIG_FIRMWARE_USE_RAETH_N65U=y
 
 ### Perform sstrip for decrease firmware size (~50KB)
 #CONFIG_FIRMWARE_PERFORM_SSTRIP=y
@@ -59,7 +67,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_LANG_SV=y
 
 ### Include tcpdump utility, ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include sftp-server (and openssl libs). openssl ~1,2MB, sftp-server ~0.06MB
 CONFIG_FIRMWARE_INCLUDE_SFTP=y
@@ -68,7 +76,7 @@ CONFIG_FIRMWARE_INCLUDE_SFTP=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include XUPNPD IPTV Mediaserver, ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include UPnP Mediaserver minidlna, ~1.6MB
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
