--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
@@ -1902,6 +1902,7 @@ CONFIG_RTL8367_RGMII_DELAY_RX=0
 # Ethernet Ralink RT3xx/RT28xx wire driver
 #
 CONFIG_RAETH=y
+CONFIG_RAETH_ASUS_N65U_OBJ=y
 CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RA_NETWORK_WORKQUEUE_BH is not set
 # CONFIG_RAETH_NAPI is not set
