--- a/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
@@ -1857,6 +1857,7 @@ CONFIG_RTL8367_RGMII_DELAY_RX=0
 # Ethernet Ralink RT3xx/RT28xx wire driver
 #
 CONFIG_RAETH=y
+# CONFIG_RAETH_ASUS_N65U_OBJ is not set
 CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RA_NETWORK_WORKQUEUE_BH is not set
 # CONFIG_RAETH_NAPI is not set
