--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
@@ -1909,6 +1909,7 @@ CONFIG_RTL8367_RGMII_DELAY_RX=1
 # Ethernet Ralink RT3xx/RT28xx wire driver
 #
 CONFIG_RAETH=y
+# CONFIG_RAETH_ASUS_N65U_OBJ is not set
 CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RA_NETWORK_WORKQUEUE_BH is not set
 # CONFIG_RAETH_NAPI is not set
