--- a/trunk/linux-3.0.x/drivers/net/raeth/Kconfig
+++ b/trunk/linux-3.0.x/drivers/net/raeth/Kconfig
@@ -4,6 +4,16 @@ config RAETH
           This driver supports Ralink gigabit ethernet family of
           adapters.
 
+config RAETH_ASUS_N65U_OBJ
+        bool "Use raeth driver hacked by ASUS (route local TX traffic via PPE). Buggy."
+        depends on RAETH
+        ---help---
+          This driver from RT-N65U, used 1xRGMII scheme, boost USB3 TX speed up to 35 MB/s,
+          boost USB2 TX speed up to 20 MB/s. Driver is unofficial (non-Ralink/MTK), used 
+          tricks and hacks by ASUS. Driver has no sources, based on old Ralink codebase 
+          raeth 2.0, route all local TX traffic to PPE. Still buggy. Caused tx_ring full 
+          issue, NETDEV_WATCHDOG issue.
+
 config PDMA_NEW
         bool
 	default y if  (RALINK_MT7620 || RALINK_MT7621)
@@ -272,6 +282,7 @@ default y if GE1_RGMII_AN || GE2_RGMII_AN
 config 100PHY
 bool
 default y if GE1_MII_AN || GE2_MII_AN
+
 
 config RAETH_SNMPD
 	bool "Support SNMPD in raeth"
