kernel configs: disable RAETH_HW_VLAN_TX for N65U and SWR1100 target (vlan tx offload needed fix in hw_nat from SDK 4.1.1.0)

--- a/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.0.x.ram.config
@@ -1864,7 +1864,7 @@ CONFIG_RA_NETWORK_TASKLET_BH=y
 # CONFIG_RAETH_SKB_RECYCLE_2K is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
-CONFIG_RAETH_HW_VLAN_TX=y
+# CONFIG_RAETH_HW_VLAN_TX is not set
 # CONFIG_GE1_MII_FORCE_100 is not set
 # CONFIG_GE1_MII_AN is not set
 # CONFIG_GE1_RVMII_FORCE_100 is not set
