--- a/trunk/linux-3.0.x/net/nat/hw_nat/Makefile
+++ b/trunk/linux-3.0.x/net/nat/hw_nat/Makefile
@@ -5,14 +5,12 @@ ifeq ($(CONFIG_RALINK_RT3052),y)
 hw_nat-objs += sys_rfrw.o
 endif
 
-ifneq ($(CONFIG_HNAT_V2),y)
 hw_nat-objs += acl_policy.o acl_ioctl.o
 hw_nat-objs += ac_policy.o ac_ioctl.o
 hw_nat-objs += mtr_policy.o mtr_ioctl.o
-endif
 
-#uncomment this flag if you want to send bcast/mcast from external if and wifi to cpu instead PPE
-EXTRA_CFLAGS += -DHWNAT_SKIP_MCAST_BCAST
+### uncomment this flag if you want to send bcast/mcast traffic to PPE instead of CPU
+#EXTRA_CFLAGS += -DHWNAT_MCAST_BCAST_PPE
 
-#uncomment this flag if you want to set debug
+### uncomment this flag if you want to set debug
 #EXTRA_CFLAGS += -DHWNAT_DEBUG
