rc,httpd,www,utils: update related code for hw_nat

--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -4,6 +4,7 @@ USERDIR = $(ROOTDIR)/user
 CFLAGS += -I. -I$(SHDIR) -I$(SHDIR)/include -I$(USERDIR)/libdisk -I$(USERDIR)/wireless_tools
 CFLAGS += -Wall -DTRANSLATE_ON_FLY
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
+CFLAGS += $(if $(CONFIG_RA_HW_NAT_IPV6),-DUSE_IPV6_HW_NAT,)
 CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
 CFLAGS += $(if $(CONFIG_RTL8367_API_8367B),-DUSE_RTL8367_API_8367B,)
 CFLAGS += $(if $(CONFIG_FIRMWARE_NVRAM_NOCOMMIT),-DNVRAM_NOCOMMIT,)
