--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -16,7 +16,7 @@ CFLAGS += $(if $(CONFIG_RT3090_AP),-DUSE_RT3090_AP,)
 CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
 CFLAGS += $(if $(CONFIG_RTL8367_API_8367B),-DUSE_RTL8367_API_8367B,)
 CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
-
+CFLAGS += $(if $(CONFIG_RA_HW_NAT_IPV6),-DUSE_IPV6_HW_NAT,)
 
 ifeq ($(CONFIG_FIRMWARE_PRODUCT_ID),"RT-N56U")
 CFLAGS += -DBOARD_N56U
