--- a/trunk/linux-3.0.x/drivers/net/raeth/Kconfig
+++ b/trunk/linux-3.0.x/drivers/net/raeth/Kconfig
@@ -14,17 +14,6 @@ config RAETH_ASUS_N65U_OBJ
           raeth 2.0, route all local TX traffic to PPE. Still buggy. Caused tx_ring full 
           issue, NETDEV_WATCHDOG issue.
 
-config PDMA_NEW
-        bool
-	default y if  (RALINK_MT7620 || RALINK_MT7621)
-        depends on RAETH
-
-config RAETH_SCATTER_GATHER_RX_DMA
-        bool
-	default y if (RALINK_MT7620 || RALINK_MT7621)
-        depends on RAETH
-
-
 choice
 	prompt "Network BottomHalves"
         depends on RAETH
@@ -40,10 +29,6 @@ choice
         bool "NAPI"
 
 endchoice
-
-#config TASKLET_WORKQUEUE_SW
-#        bool "Tasklet and Workqueue switch"
-#        depends on RA_NETWORK_TASKLET_BH
 
 config RAETH_SKB_RECYCLE_2K
         bool "SKB Recycling"
@@ -62,61 +47,11 @@ config RAETH_CHECKSUM_OFFLOAD
 	default y
         depends on RAETH && !RALINK_RT2880
 
-config 32B_DESC
-        bool "32bytes TX/RX description"
-	default n
-        depends on RAETH && RALINK_MT7620
-        ---help---
-          At this moment, you cannot enable 32B description with Multiple RX ring at the same time.
-
-config RAETH_LRO
-        bool "LRO (Large Receive Offload )"
-	select INET_LRO
-        depends on RAETH && (RALINK_RT6855A || RALINK_MT7620 || RALINK_MT7621)
-
 config RAETH_HW_VLAN_TX
         bool "Transmit VLAN HW (DoubleVLAN is not supported)"
         depends on RAETH && !RALINK_RT5350
         ---help---
           Please set net.ipv4.vlan_double_tag=0 for enable vlan hw offload before eth2 up
-
-config RAETH_HW_VLAN_RX
-        bool "Receive VLAN HW (DoubleVLAN is not supported)"
-        depends on RAETH && RALINK_MT7621
-        ---help---
-          Please disable HW_VLAN_RX if you need double vlan
-
-config RAETH_TSO
-        bool "TSOV4 (Tcp Segmentaton Offload)"
-	depends on RAETH_HW_VLAN_TX && (RALINK_RT6855 || RALINK_RT6855A || RALINK_MT7620 || RALINK_MT7621)
-
-config RAETH_TSOV6
-        bool "TSOV6 (Tcp Segmentaton Offload)"
-	depends on RAETH_TSO
-
-config RAETH_RW_PDMAPTR_FROM_VAR
-	bool
-	default y if RALINK_RT6855A || RALINK_MT7620
-        depends on RAETH
-
-#config RAETH_QOS
-#        bool "QoS Feature"
-#        depends on RAETH && !RALINK_RT2880 && !RALINK_MT7620 && !RALINK_MT7621 && !RAETH_TSO
-
-choice
-        prompt "QoS Type"
-        depends on RAETH_QOS
-        default DSCP_QOS_DSCP
-
-config  RAETH_QOS_DSCP_BASED
-        bool "DSCP-based"
-        depends on RAETH_QOS 
-
-config  RAETH_QOS_VPRI_BASED
-        bool "VPRI-based"
-        depends on RAETH_QOS
-
-endchoice
 
 choice
         prompt "GMAC is connected to"
@@ -125,27 +60,27 @@ choice
 
 config  GE1_MII_FORCE_100
         bool "MII_FORCE_100 (10/100M Switch)"
-        depends on (RALINK_RT2880 || RALINK_RT3883 || RALINK_MT7621) 
+        depends on (RALINK_RT2880 || RALINK_RT3883)
 
 config  GE1_MII_AN
         bool "MII_AN (100Phy)"
-        depends on (RALINK_RT2880 || RALINK_RT3883 || RALINK_MT7621) 
+        depends on (RALINK_RT2880 || RALINK_RT3883)
 
 config  GE1_RVMII_FORCE_100
         bool "RvMII_FORCE_100 (CPU)"
-        depends on (RALINK_RT2880 || RALINK_RT3883 || RALINK_MT7621) 
+        depends on (RALINK_RT2880 || RALINK_RT3883)
 
 config  GE1_RGMII_FORCE_1000
         bool "RGMII_FORCE_1000 (GigaSW, CPU)"
-        depends on (RALINK_RT2880 || RALINK_RT3883 || RALINK_MT7621)
+        depends on (RALINK_RT2880 || RALINK_RT3883)
 
 config  GE1_RGMII_AN
         bool "RGMII_AN (GigaPhy)"
-        depends on (RALINK_RT2880 || RALINK_RT3883 || RALINK_MT7621) 
+        depends on (RALINK_RT2880 || RALINK_RT3883)
 
 config  RT_3052_ESW
-        bool "Ralink Embedded Switch"
-        depends on RALINK_RT3052 || RALINK_RT3352 || RALINK_RT5350 || RALINK_RT6855 || RALINK_RT6855A || RALINK_MT7620
+        bool "Ralink Embedded Switch(10/100Mbps)"
+        depends on RALINK_RT3052 || RALINK_RT3352 || RALINK_RT5350
 
 
 endchoice
@@ -175,32 +110,9 @@ config	ESW_DOUBLE_VLAN_TAG
 	bool
 	default y if RT_3052_ESW
 
-config RAETH_HAS_PORT4
-        bool "Port 4 Support"
-        depends on RAETH && RALINK_MT7620
-choice
-        prompt "Target Mode"
-        depends on RAETH_HAS_PORT4
-	default P4_RGMII_TO_MAC_MODE
-
-	config P4_MAC_TO_PHY_MODE
-		bool "Giga_Phy (RGMII)"
-	config P4_RGMII_TO_MAC_MODE
-		bool "Giga_SW/iNIC (RGMII)"
-	config P4_MII_TO_MAC_MODE
-		bool "External_CPU (MII_RvMII)"
-	config P4_RMII_TO_MAC_MODE
-		bool "External_CPU (RvMII_MII)"
-endchoice
-
-config  MAC_TO_GIGAPHY_MODE_ADDR2
-        hex "Port4 Phy Address"
-	default 0x4
-        depends on P4_MAC_TO_PHY_MODE
-
 config RAETH_HAS_PORT5
         bool "Port 5 Support"
-        depends on RAETH && (RALINK_RT3052 || RALINK_RT3352 || RALINK_RT6855 || RALINK_RT6855A || RALINK_MT7620)
+        depends on RAETH && (RALINK_RT3052 || RALINK_RT3352)
 choice
         prompt "Target Mode"
         depends on RAETH_HAS_PORT5
@@ -228,7 +140,7 @@ config  MAC_TO_GIGAPHY_MODE_ADDR
 
 config RAETH_GMAC2
         bool "GMAC2 Support"
-        depends on RAETH && (RALINK_RT3883 || RALINK_MT7621)
+        depends on RAETH && RALINK_RT3883
 
 choice
         prompt "GMAC2 is connected to"
@@ -299,7 +211,3 @@ config RAETH_MEMORY_OPTIMIZATION
 	depends on RAETH
 	default n
 
-config RAETH_DISABLE_TX_TIMEO
-	bool "Disable ralink old code for retransmit timeout. In new code driver code monitor this"
-	depends on RAETH
-	default y
