project config: ability to exclude ufsd driver

--- a/trunk/.config
+++ b/trunk/.config
@@ -44,6 +44,9 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### Enable IPv6 (full support only for kernel 3.x yet)
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
+### Enable NTFS filesystem support, Paragon ufsd driver (add ~0.4MB)
+CONFIG_FIRMWARE_ENABLE_UFSD=y
+
 ### Enable XFS filesystem support (only for kernel 3.x, add ~0.6MB)
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
