project tree: disable doc and test subdirs for aria2, add cifs mount support to busybox

--- a/trunk/configs/IPv4/busybox.config
+++ b/trunk/configs/IPv4/busybox.config
@@ -580,7 +580,7 @@ CONFIG_FEATURE_MOUNT_VERBOSE=y
 # CONFIG_FEATURE_MOUNT_HELPERS is not set
 CONFIG_FEATURE_MOUNT_LABEL=y
 CONFIG_FEATURE_MOUNT_NFS=y
-# CONFIG_FEATURE_MOUNT_CIFS is not set
+CONFIG_FEATURE_MOUNT_CIFS=y
 CONFIG_FEATURE_MOUNT_FLAGS=y
 CONFIG_FEATURE_MOUNT_FSTAB=y
 # CONFIG_PIVOT_ROOT is not set
