rc,httpd,www: add WAN port source select

--- a/trunk/linux-3.0.x/drivers/net/rtl8367/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/rtl8367/Makefile
@@ -14,5 +14,6 @@ obj-$(CONFIG_RTL8367_API_8367B)		+= api_8367b/
 obj-y					+= ralink_gpp.o
 obj-$(CONFIG_RTL8367_CIF_SMI)		+= ralink_smi.o
 obj-$(CONFIG_RTL8367_CIF_MDIO)		+= ralink_mdio.o
+obj-$(CONFIG_RTL8367_IGMP_SNOOPING)	+= rtl8367_igmp.o
 obj-$(CONFIG_RTL8367)			+= rtl8367_drv.o
 
