transmission: update to v2.76

--- a/trunk/user/transmission/transmission-trunk/configure.ac
+++ b/trunk/user/transmission/transmission-trunk/configure.ac
@@ -3,8 +3,8 @@ dnl STATUS: "X" for prerelease beta builds,
 dnl         "Z" for unsupported trunk builds,
 dnl         "0" for stable, supported releases
 dnl these should be the only two lines you need to change
-m4_define([user_agent_prefix],[2.75])
-m4_define([peer_id_prefix],[-TR2750-])
+m4_define([user_agent_prefix],[2.76])
+m4_define([peer_id_prefix],[-TR2760-])
 
 AC_INIT([transmission],[user_agent_prefix],[http://trac.transmissionbt.com/newticket])
 AC_SUBST(USERAGENT_PREFIX,[user_agent_prefix])
@@ -16,7 +16,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 dnl AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SRCDIR(libtransmission/transmission.h)
-AM_INIT_AUTOMAKE([1.9 tar-pax no-dist-gzip dist-xz dist-bzip2])
+AM_INIT_AUTOMAKE([1.9 tar-pax])
 LT_INIT
 
 if test m4_substr(peer_id_prefix,6,1) = "0"; then
